chore: introduce tsyringe DI; added Group model; refactors
