# src/index.ts
@@ -1,3 +1,4 @@
+import 'reflect-metadata';
 import express, { Request, Response } from 'express';
 import cors from 'cors';
 import responseTime from 'response-time';
@@ -7,6 +8,7 @@ import {
   trafficRouter,
   companyRouter,
   budgetRouter,
+  groupRouter,
 } from './routes';
 
 const app = express();
@@ -23,69 +25,10 @@ app.use(
 );
 
 app.use('/api/v1/user', userRouter);
+app.use('/api/v1/group', groupRouter);
 app.use('/api/v1/budget', budgetRouter);
 app.use('/api/v1/company', companyRouter);
 app.use('/api/v1/traffic', trafficRouter);
-
-// app.get('/', (req: Request, res: Response) => {
-//   res.json({
-//     'result': 'done',
-//   });
-// });
-//
-// app.get('/items', (req: Request, res: Response) => {
-//   const basic = {
-//     id: '4',
-//     title: 'impostor 2',
-//     amount: 9,
-//   };
-//
-//   let items = [
-//     {
-//       id: '1',
-//       title: 'gas',
-//       amount: 987,
-//     },
-//     {
-//       id: '2',
-//       title: 'petrol',
-//       amount: 66,
-//     },
-//     {
-//       id: '3',
-//       title: 'impostor',
-//       amount: 1,
-//     },
-//     {
-//       id: '4',
-//       title: 'impostor 2',
-//       amount: 9,
-//     },
-//   ];
-//
-//   items.push({
-//     ...basic,
-//     id: '5',
-//     amount: Math.floor(Math.random() * 100)
-//   })
-//
-//   items.sort(() => Math.random() - 0.5);
-//
-//   res.json(items);
-// });
-
-// const INotifyWait = require('inotifywait');
-
-// let watch1 = new INotifyWait('/app/var/dummy/', {recursive: false});
-// watch1.on('ready', (filename: string) => {
-//  console.log('watcher is watching');
-// });
-// watch1.on('add', (filename: string) => {
-//  console.log(filename + ' added');
-//  watch1.close();
-// });
-
-// fsWatcher.listen();
 
 // start the express server
 app.listen(port, () => {
